templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-manual
  labels:
    helm.sh/chart: application-0.1.0
    app.kubernetes.io/name: application
    app.kubernetes.io/instance: application
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: application
      app.kubernetes.io/instance: application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: application
        app.kubernetes.io/instance: application
    spec:
      imagePullSecrets:
        - name: ci-pull-secret
      securityContext:
        {}
      containers:
        - name: application-manual
          securityContext:
            {}
          image: "instance-quay-quay-registry.apps.lab01.gpslab.club/acipriani/application:1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
          resources:
            {}
