templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-manual
  labels:
    helm.sh/chart: application-0.1.0
    app.kubernetes.io/name: application
    app.kubernetes.io/instance: application
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: application
    app.kubernetes.io/instance: application
